--- a/index.html
+++ b/index.html
@@ -44,37 +44,6 @@ color:orange;
  <br>
   <a href="https://en.wikipedia.org/wiki/Computer_programming">Learn About Coding</a>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
  <p> Makers of this page </p>
 <ul>
   <li> Maysam Farahani</li>
@@ -92,32 +61,9 @@ color:orange;
   </ol>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <h2>Different Coding Languages</h2>
   <h3>Python </h3>
-  <p2>
-
-
-
-
-
-
-
-
-Python is used for a large variety of things such as creating programs and doing maintenance on several pieces of software such as instagram. It is simpler than C++ and is a great tool for starters to learn how to program. Youtube for example uses python for its infrastructure, and google supports python as well as other programming languages. Python is a very viable tool and can be used for html coding to an extent, which is why a large variety of programmers learn it before any other coding. This helps them start and begin coding quickly and get used to it before any other programs. </p2>
+  <p2>Python is used for a large variety of things such as creating programs and doing maintenance on several pieces of software such as instagram. It is simpler than C++ and is a great tool for starters to learn how to program. Youtube for example uses python for its infrastructure, and google supports python as well as other programming languages. Python is a very viable tool and can be used for html coding to an extent, which is why a large variety of programmers learn it before any other coding. This helps them start and begin coding quickly and get used to it before any other programs. </p2>
   
   <h3> Lua </h3>
   
@@ -132,76 +78,6 @@ Python is used for a large variety of things such as creating programs and doing
   <h3> C++</h3>
   <p2> C++ is very viable as it is used to make video games, operating systems, art applications and even music players. Many offline programs and software are coded in C++. C++ is very beginner friendly, though due to the massive amounts of features and tricks that are hard to grasp, it is hard to master in a short amount of time due to what was mentioned above. It will also be required to write an immense amount of code to simply get a working prototype. If an application is very resource intensive it will most likely be written in C++ since it can be very specific, which is why it allows for many games with high graphic settings to be so beautiful. Generally, C++ is faster than many languages as well, and due to how specific you can be with C++, you have a lot of control over what it does, which is part of why it takes a large amount of code in order to get a working prototype. Java was created due to the amount of errors professional programmers were making, which is why it is very hard to find a good C++ programmer.
 </p2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<p href="https://en.wikipedia.org/">Our Souces</p>
-
-
-
-
-
 
 </body></html>
 
