--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ color:orange;
   color:yellow;
   font-size:20px;
    text-align:center;
+  border: 1px solid rgba(0, 0, 0, 0.3);
   }
   li{
   color:brown;
