--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html><head><style>
+  a{
+  border: 2px solid rgba(0, 0, 0, 0.3);
+background-color:red;
+  }
+ 
+  
+  
   h1{
 color:orange;
   font-size:70px;
