--- a/paragraphs.html
+++ b/paragraphs.html
@@ -1,1 +1,75 @@
-<p> hi <p> 
+<html><head><style>
+  a{
+  border: 2px solid rgba(0, 0, 0, 0.3);
+background-color:red;
+    height: 100px;
+  }
+ 
+  
+  
+  h1{
+color:orange;
+  font-size:70px;
+  text-align:center;
+}
+  *{
+  font-family:Calibri;
+  color:yellow;
+  font-size:20px;
+   text-align:center;
+ 
+  }
+  li{
+  color:brown;
+  font-size:30px;
+   text-align:left;
+  font-weight:900;
+  }
+  p1{
+  font-size:30px;
+ }
+  p{
+  text-align:left;
+  font-size:35px;
+  }
+  h2{
+  font-size:50px;
+  
+  }
+  p2{
+  text-align:centre;
+  font-size:30px;
+  }
+   h3{
+  font-size:45px;
+  }
+  html{
+  background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQoUPxKcJVwiqU7X60sAPTT_qz4YWQ9m1mafqPuOjDzMEcZH0D5dg");
+  }
+</style></head><body><h1>Programming</h1>
+<p1>Project 3: Coding a website</p1>
+  <br>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCZPeZlCnwhnDGyZFc3D4vbeAToEYj1bWT-FAv-ujtjxjW3CM8">
+ <br>
+  <a href="https://en.wikipedia.org/wiki/Computer_programming">Learn About Coding</a>
+
+
+  <h2>Different Coding Languages</h2>
+  <h3>Python </h3>
+  <p2>Python is used for a large variety of things such as creating programs and doing maintenance on several pieces of software such as instagram. It is simpler than C++ and is a great tool for starters to learn how to program. Youtube for example uses python for its infrastructure, and google supports python as well as other programming languages. Python is a very viable tool and can be used for html coding to an extent, which is why a large variety of programmers learn it before any other coding. This helps them start and begin coding quickly and get used to it before any other programs. </p2>
+  
+  <h3> Lua </h3>
+  
+  <p2>Lua is purely used for video game programming. It was created by Luiz Henrique de Figueiredo and Waldemar Celes, who were members of Tecgraf at Pontifical Catholic University of Rio de Janeiro, Brazil. The origin of Lua began when Tecgraf’s clients couldn’t afford to buy customized software from abroad, so they implemented the basic tools from scratch. Lua at this stage is meant to be a generally embeddable extension service. It allows for programmers to extends the language and implement what they liked, which is why complicated or domain specific features were not included since other people could simply do it themselves. This was implemented in order to meet the requirements for a customizable and easy to access language </p2>
+  
+  <h3>C </h3>
+  <p2>C is a very small language in relativity to C++, which makes it much easier to write, which is why it is used more often for beginners than C++, since it is much easier to make a C compiler than  a C++ compiler. The size of the language also helps programmers learn it faster. C is more often used for embed things, system software/drivers, and open source software such as the steam source engine.
+ </p2>
+  <h3>C# </h3>
+  <p2>C# is very similar to Java and C++, and though cannot be compared to C due to not being similar in many ways, has advantages over both Java and C++ due to many various reasons. C# is better than C++ as it has a native garbage collector which collects the objects that are occupying memory space and are unnecessary, it being native allowing it to run faster than if it were not native. It also allows you to treat codes of different classes as free functions, which makes it so that you don’t need different objects with different classes, since they are free functions. It has a much larger standard library than C++, that is also easier to use. The whole language is ingeneral much easier and does the same things, if not more. The only thing that sets C# apart from C++, which is why C++ is still used, is the fact that C++ can be used to code more complicated things and diverse things.C# is better than java as it has generics, which, upon doing further research, java does not, though they claim they do. The native constructs are much easier to read and are simply better, as instead of something such as private class static implementations, you get properties and events, which make it easier to code.
+  </p2>
+  <h3> C++</h3>
+  <p2> C++ is very viable as it is used to make video games, operating systems, art applications and even music players. Many offline programs and software are coded in C++. C++ is very beginner friendly, though due to the massive amounts of features and tricks that are hard to grasp, it is hard to master in a short amount of time due to what was mentioned above. It will also be required to write an immense amount of code to simply get a working prototype. If an application is very resource intensive it will most likely be written in C++ since it can be very specific, which is why it allows for many games with high graphic settings to be so beautiful. Generally, C++ is faster than many languages as well, and due to how specific you can be with C++, you have a lot of control over what it does, which is part of why it takes a large amount of code in order to get a working prototype. Java was created due to the amount of errors professional programmers were making, which is why it is very hard to find a good C++ programmer.
+</p2>
+
+</body></html>
