--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@ color:orange;
  <br>
   <a href="https://en.wikipedia.org/wiki/Computer_programming">Learn About Coding</a>
 <br>
-  <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5MNjmG891n5dYd4Zv2Dg1ok6hbabrYwjxUFB-u_jz8yb2hx1UMw" target="_blank"><img src="#" alt="Paragraphs"/></a>
+  <a href="/.paragraphs.html" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5MNjmG891n5dYd4Zv2Dg1ok6hbabrYwjxUFB-u_jz8yb2hx1UMw" alt="Paragraphs"/></a>
 </body></html>
