--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@ color:orange;
 <p1>Project 3: Coding a website</p1>
   <br>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCZPeZlCnwhnDGyZFc3D4vbeAToEYj1bWT-FAv-ujtjxjW3CM8">
- <br>
-  <a href="https://en.wikipedia.org/wiki/Computer_programming">Learn About Coding</a>
 <br>
-  <a href="/.paragraphs.html" target="_blank">
-    <br>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5MNjmG891n5dYd4Zv2Dg1ok6hbabrYwjxUFB-u_jz8yb2hx1UMw" alt="Paragraphs"/></a>
+  <a href="/.paragraphs.html">
+   </a>
 </body></html>
