--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   border: 2px solid rgba(0, 0, 0, 0.3);
 background-color:red;
     height: 100px;
-  }
- 
-  
-  
+  } 
   h1{
 color:orange;
   font-size:70px;
@@ -19,12 +16,6 @@ color:orange;
    text-align:center;
   border: 1px solid rgba(0, 0, 0, 0.3);
   }
-  li{
-  color:brown;
-  font-size:30px;
-   text-align:left;
-  font-weight:900;
-  }
   p1{
   font-size:30px;
  }
@@ -32,18 +23,7 @@ color:orange;
   text-align:left;
   font-size:35px;
   }
-  h2{
-  font-size:50px;
-  
-  }
-  p2{
-  text-align:centre;
-  font-size:30px;
-  }
-   h3{
-  font-size:45px;
-  }
-  html{
+html{
   background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQoUPxKcJVwiqU7X60sAPTT_qz4YWQ9m1mafqPuOjDzMEcZH0D5dg");
   }
 </style></head><body><h1>Programming</h1>
@@ -51,6 +31,5 @@ color:orange;
   <br>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCZPeZlCnwhnDGyZFc3D4vbeAToEYj1bWT-FAv-ujtjxjW3CM8">
 <br>
-  <a href="/.paragraphs.html">
-   </a>
+  <a href="/.paragraphs.html">Paragraphs</a>
 </body></html>
