--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   a{
   border: 2px solid rgba(0, 0, 0, 0.3);
 background-color:red;
-    height: 100px;
+    height: 20px;
+    font-style: normal;
   } 
   h1{
 color:orange;
