--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   a{
   border: 2px solid rgba(0, 0, 0, 0.3);
 background-color:red;
-    height: 20px;
+  padding: 40px;
     font-style: normal;
   } 
   h1{
@@ -32,5 +32,6 @@ html{
   <br>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCZPeZlCnwhnDGyZFc3D4vbeAToEYj1bWT-FAv-ujtjxjW3CM8">
 <br>
+  <br>
   <a href="/.paragraphs.html">Paragraphs</a>
 </body></html>
