--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html><head><style>
+  .game{
+   text-align:left;
+  }
+  
+  
   a{
   border: 2px solid rgba(0, 0, 0, 0.3);
 background-color:red;
@@ -33,4 +38,8 @@ html{
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCZPeZlCnwhnDGyZFc3D4vbeAToEYj1bWT-FAv-ujtjxjW3CM8">
 <br><br><br>
   <a href="/.paragraphs.html">Paragraphs</a>
-</body></html>
+  <div class="game">
+   <a href="/.game.html">Game</a>
+  </div>
+  
+  </body></html>
