--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ html{
   <br>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCZPeZlCnwhnDGyZFc3D4vbeAToEYj1bWT-FAv-ujtjxjW3CM8">
 <br><br><br>
-  <a href="/.paragraphs.html">Paragraphs</a>
+  <a href="/paragraphs.html">Paragraphs</a>
   <div class="game">
-   <a href="/.game.html">Game</a>
+   <a href="/game.html">Game</a>
   </div>
   
   </body></html>
