--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@ html{
    <div class="game">
   <a href="/paragraphs.html">Paragraphs</a>
 <a href="/game.html">Game</a>
+   <a href="">Comming Soon</a>
+<a href="">Comming Soon</a>
+   <a href="">Comming Soon</a>
+<a href="">Comming Soon</a>
+  
+  
   </div>
   
   </body></html>
