--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ html{
    <div class="game">
   <a href="/paragraphs.html">Paragraphs</a>
 <a href="/game.html">Game</a>
-   <a href="">Comming Soon</a>
+   <a href="/contact.html">Contact</a>
 <a href="">Comming Soon</a>
    <a href="">Comming Soon</a>
 <a href="">Comming Soon</a>
