--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
   li{
   color:brown;
   font-size:30px;
-   text-align:left;
+   text-align:center;
   font-weight:900;
 
 p{
-  text-align:left;
+  text-align:center;
   font-size:35px;
   }
 </style>
