--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,24 @@
-<style>
+<html><head><style>
+ 
   *{
   font-family:Calibri;
   color:purple;
   font-size:20px;
    text-align:center;
   }
-  li{
-  color:brown;
-  font-size:30px;
-   text-align:center;
-  font-weight:900;
-
+p1{
+ color:brown;
+  font-size:40px;
+  } 
 p{
   text-align:center;
-  font-size:35px;
+  font-size:55px;
   }
 </style>
 
- <p> Makers of this page </p>
+ </head><body><p> Makers of this page </p>
 <ul>
-  <li> Maysam Farahani</li>
-  <li>Darin Wong</li>
+  <p1> Maysam Farahani</p1><br>
+  <p1>Darin Wong</p1>
    </ul>
+</body></html>
