--- a/game.html
+++ b/game.html
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
-<p> hi <p>
+<p> Welcome, Darren Wong, begin making your game as soon as possible you idiot, we're already in second term!
+- Darren Wong<p>
