--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ html{
   <a href="/paragraphs.html">Paragraphs</a>
 <a href="/game.html">Game</a>
    <a href="/contact.html">Contact</a>
-<a href="">Comming Soon</a>
-   <a href="">Comming Soon</a>
-<a href="">Comming Soon</a>
+<a href="">Coming Soon</a>
+   <a href="">Coming Soon</a>
+<a href="">Coming Soon</a>
   
   
   </div>
