--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,6 @@ p{
  </head><body><p> Makers of this page </p>
 <ul>
   <p1> Maysam Farahani</p1><br>
-  <p1>Darin Wong</p1>
+  <p1>Darrin Wong</p1>
    </ul>
 </body></html>
