--- a/game.html
+++ b/game.html
@@ -2,3 +2,4 @@
 <p> Welcome, Darren Wong, begin making your game as soon as possible you idiot, we're already in second term!
 - Darren Wong<p>
  <%  print 1 %>
+djashdajibdaskdn a dsasd
