--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   
   a{
-  border: 2px solid rgba(0, 0, 0, 0.3);
+  border: 4px groove rgba(0, 0, 0, 0.3);
 background-color:red;
   padding: 40px;
     font-style: normal;
