--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ html{
   <a href="/paragraphs.html">Paragraphs</a>
 <a href="/game.html">Game</a>
    <a href="/contact.html">Contact</a>
-<a href="/game.py">Python</a>
+<a href="/game.py">McDonalds</a>
    <a href="">Coming Soon</a>
 <a href="">Coming Soon</a>
   
