--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ html{
 <a href="/game.html">Game</a>
    <a href="/contact.html">Contact</a>
 <a href="/game.py">McDonalds</a>
-   <a href="">Coming Soon</a>
+   <a href="/katfe.html">Katfe</a>
 <a href="">Coming Soon</a>
 
   
