--- a/katfe.html
+++ b/katfe.html
@@ -16,7 +16,8 @@ background-image: url("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAA
 <h1> Welcome to the katfe webpage </h1>
 <br
     />
-<br /><h3>       Menu</h3>
+<h3>Our Menu</h3>
+<li> Fresh </li>
 
 
 
