--- a/index.html
+++ b/index.html
@@ -32,7 +32,25 @@ color:orange;
 html{
   background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQoUPxKcJVwiqU7X60sAPTT_qz4YWQ9m1mafqPuOjDzMEcZH0D5dg");
   }
-</style></head><body><h1>Programming</h1>
+</style>
+<script> 
+sign = prompt("Would you like to sign up for this website?");  
+if (sign === "yes")
+{
+  promot("Type your username")
+  promot("Type your password")
+  promot("Retype your password")
+}
+  
+  
+  
+  
+  
+  
+  
+  
+ </script>
+ </head><body><h1>Programming</h1>
 <p1>Project 3: Coding a website</p1>
   <br>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCZPeZlCnwhnDGyZFc3D4vbeAToEYj1bWT-FAv-ujtjxjW3CM8">
