--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@ html{
 sign = prompt("Would you like to sign up for this website?");  
 if (sign === "yes")
 {
-  promot("Type your username")
-  promot("Type your password")
-  promot("Retype your password")
+  prompt("Type your username")
+  prompt("Type your password")
+  prompt("Retype your password")
 }
+  
   
   
   
