--- a/index.html
+++ b/index.html
@@ -34,13 +34,20 @@ html{
   }
 </style>
 <script> 
-sign = prompt("Would you like to sign up for this website?");  
+sign = prompt("Would you like to sign up for this website?(type yes or no)");  
 if (sign === "yes")
 {
-  prompt("Type your username")
-  prompt("Type your password")
+user = prompt("Type your username")
+pass = prompt("Type your password")
   prompt("Retype your password")
 }
+else 
+  }
+sign = prompt("Do you already have a account?")
+if (sign === "yes")
+  {
+  
+  }
   
   
   
