--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@ pass = prompt("Type your password")
   prompt("Retype your password")
 }
 else 
-  }
+{
 sign = prompt("Do you already have a account?")
 if (sign === "yes")
-  {
-  
+{
+  prompt("ok")
+}
   }
   
   
