--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ if (sign === "yes")
 <br><br><br>
    <div class="game">
   <a href="/paragraphs.html">Paragraphs</a>
-<a href="/game.html">Game</a>
+<a href="/java.html">Game</a>
    <a href="/contact.html">Contact</a>
 <a href="/game.py">McDonalds</a>
    <a href="/katfe.html">Katfe</a>
