--- a/java.html
+++ b/java.html
@@ -1,6 +1,8 @@
+<style>
 html{
   background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQoUPxKcJVwiqU7X60sAPTT_qz4YWQ9m1mafqPuOjDzMEcZH0D5dg");
   }
+</style>
   <canvas id ="gameCanvas" width="800" height="600"> 
 </canvas>
 <script>
