--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@ if (sign === "yes")
 <a href="/java.html">Game</a>
    <a href="/contact.html">Contact</a>
 <a href="/game.py">McDonalds</a>
-   <a href="/katfe.html">Katfe</a>
-<a href="">Coming Soon</a>
+   <a href="/game.html">Snake</a>
 
   
   </div>
