--- a/Term3.html
+++ b/Term3.html
@@ -1,7 +1,11 @@
 <style>
-:p {
+html{
+  background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQoUPxKcJVwiqU7X60sAPTT_qz4YWQ9m1mafqPuOjDzMEcZH0D5dg");
+}
 
-
+p {
+  text-align:left;
+  font-size:35px;
 }
 
 
