--- a/Term3.html
+++ b/Term3.html
@@ -2,7 +2,16 @@
 html{
   background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQoUPxKcJVwiqU7X60sAPTT_qz4YWQ9m1mafqPuOjDzMEcZH0D5dg");
 }
-
+  h1{
+  text-align:middle;
+  font-size:60px;
+  color:purple;
+  }
+   h2{
+  text-align:middle;
+  font-size:50px;
+  color:purple;
+  }
 p {
   text-align:left;
   font-size:35px;
@@ -16,20 +25,36 @@ p {
 
 </style>
 
-<p>The Internet is the connection of computers worldwide and has many purposes. It was originally invented for communication but gained more purposes as it changed and developed. But can it be used for education, or is it a distraction for students?  </p>
+<h1>Is The Internet a Good Tool for School? </h1>
 
 <br>
 
-<p>One can use the internet for many purposes in class but one of the most useful is research. Some may say that one can just go to the library and pick out books but that can take hours, whereas with the internet one can access thousands of useful facts instantly. One may also still argue that the library is organized and can provide tons of facts as well, but the internet has many tools that can read a page for one and pick out information that one needs. </p>
+<p>The Internet is the connection of computers worldwide and has many purposes. It was originally invented for communication but gained more purposes as it changed and developed. But can it be used for education, or is it a distraction for students? </p>
 
 <br>
 
-<p>Another useful tool the internet can provide one in school is editors. Editors can help one edit one’s project such as if one are working on an essay the helpful editor can spot grammar errors in one’s writing, or it can search for plagiarism so all one’s valuable effort doesn't get one a 0 for a tiny mistake. Sure one can just edit by himself, but with this tool it can save one, valuable time and effort. You may also argue that programs are unreliable and can glitch out but that is not true for modern programs as they are very well designed and coded. </p>
+<p>One can use the internet for many purposes in class but one of the most useful is research. Some may say that one can just go to the library and pick out books but that can take hours, whereas with the internet one can access thousands of useful facts instantly. One may also still argue that the library is organized and can provide tons of facts as well, but the internet has many tools that can read a page for one and pick out information that one needs.</p> 
 
 <br>
 
-<p>Another handy tool the internet can provide a student with is games. While some games are harmful to a student's learning some can help with learning and studying by teaching a student in a way a teacher cannot. Games will help students unlock a part of their brain that can help them learn better, Such as if one are having troubles with math the game can create problems that makes one use math formulas in order to progress in game.</p>
+<p>Another useful tool the internet can provide one in school is editors. Editors can help one edit one’s project such as if one are working on an essay the helpful editor can spot grammar errors in one’s writing, or it can search for plagiarism so all one’s valuable effort doesn't get one a 0 for a tiny mistake. Sure one can just edit by himself, but with this tool it can save one, valuable time and effort. You may also argue that programs are unreliable and can glitch out but that is not true for modern programs as they are very well designed and coded.</p>
+  
+<br>
+
+<p> While some games are harmful to a student's learning some can help with learning and studying by teaching a student in a way a teacher cannot. Games will help students unlock a part of their brain that can help them learn better, Such as if one are having troubles with math the game can create problems that makes one use math formulas in order to progress in game.</p>
+  
+<br>
+
+<p>Storage is another service that the internet can provide students and teachers with. This can be useful to students who have to write a essay, they can write some of it then store it on a text file and continue on the next day. This is the same with teachers they can store marks for students and they can keep adding on as they mark more work.</p>
 
 <br>
 
-<p>Storage is another service that the internet can provide students and teachers with. This can be useful to students who have to write a essay, they can write some of it then store it on a text file and continue on the next day. This is the same with teachers they can store marks for students and they can keep adding on as they mark more work. </p>
+<p>Even though the internet has many distractions such as video games, social media, and others I think that the internet can help people more than it can distract because of the endless possibilities waiting to be unlocked.</p>
+
+<h2>Cite</h2>
+<br>
+<p>Wikipedia contributors. "Internet." Wikipedia, The Free Encyclopedia. Wikipedia, The Free Encyclopedia, 21 Apr. 2017. Web. 21 Apr. 2017.</p>
+<br>
+<p>"Is the Internet Good or Bad for Education?" Oxbridge Essays. N.p., 28 Jan. 2017. Web. 21 Apr. 2017. </p>
+<br>
+<p>Simon, Maya, Mike Graziano, and Amanda Lenhart. "The Internet And Education". Pew Research Center: Internet, Science & Tech. N.p., 2017. Web. 11 May 2017</p>
