--- a/Term3.html
+++ b/Term3.html
@@ -3,12 +3,12 @@ html{
   background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQoUPxKcJVwiqU7X60sAPTT_qz4YWQ9m1mafqPuOjDzMEcZH0D5dg");
 }
   h1{
-  text-align:middle;
+  text-align:center;
   font-size:60px;
   color:purple;
   }
    h2{
-  text-align:middle;
+  text-align:center;
   font-size:50px;
   color:purple;
   }
