--- a/Term3.html
+++ b/Term3.html
@@ -1,6 +1,6 @@
 <style>
 html{
-  background-image: url("https://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.planwallpaper.com%2Fstatic%2Fimages%2Fblack_background_pattern_light_texture_55291_3840x2400.jpg&imgrefurl=http%3A%2F%2Fwww.planwallpaper.com%2Fbackground-pattern&docid=o6NvBM-rMmgwZM&tbnid=z3722uvy_ngtLM%3A&vet=10ahUKEwipq6uLuZ3UAhXJiFQKHXuMDqUQMwjgAShNME0..i&w=3840&h=2400&safe=strict&bih=770&biw=1600&q=background%20image&ved=0ahUKEwipq6uLuZ3UAhXJiFQKHXuMDqUQMwjgAShNME0&iact=mrc&uact=8");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvmj4wJRyoyiFLgyG6sCV990vSCwFl8TXNln_YAD1Anx2nLyrrsg");
 }
   h1{
   text-align:center;
