--- a/index.html
+++ b/index.html
@@ -33,32 +33,7 @@ html{
   background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQoUPxKcJVwiqU7X60sAPTT_qz4YWQ9m1mafqPuOjDzMEcZH0D5dg");
   }
 </style>
-<script> 
-sign = prompt("Would you like to sign up for this website?(type yes or no)");  
-if (sign === "yes")
-{
-user = prompt("Type your username")
-pass = prompt("Type your password")
-  prompt("Retype your password")
-}
-else 
-{
-sign = prompt("Do you already have a account?")
-if (sign === "yes")
-{
-  prompt("ok")
-}
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
- </script>
+
  </head><body><h1>Programming</h1>
 <p1>Project 3: Coding a website</p1>
   <br>
@@ -67,7 +42,7 @@ if (sign === "yes")
    <div class="game">
   <a href="/paragraphs.html">Paragraphs</a>
 <a href="/java.html">Game</a>
-   <a href="/contact.html">Contact</a>
+   <a href="/Infected.html">Infected</a>
 <a href="/game.py">McDonalds</a>
    <a href="/game.html">Snake</a>
 
