--- a/Infected.html
+++ b/Infected.html
@@ -42,10 +42,12 @@ var virus = 'data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBw8PDxUP
 
 
 function synthesis() {
+	console.log("synthesis")
 	draw()
 	canvasContext.fillText("Synthesis (Part3)",150,30);
-	if (turn === false) {
+	if (turn1 === false) {
 	randy = random()
+	turn1 = true
 	}
 	if (synthesis1 === 0) {
 	
@@ -53,43 +55,127 @@ function synthesis() {
 		canvasContext.fillText("Press 1",150,200);
 		if (Key1 === true) {
 			Key1 = false
-			synthesis1 = synthesis + 1
-			
+			synthesis1 = synthesis1 + 1
+			turn1 = false
 			
 		}
 		if (Key2 === true) {
 			Key2 = false
 			wrong()
+			heart = heart - 1
+			turn1 = false
 		}
-	}else if (randy === 2) {
+	}else if (randy === 0) {
 		canvasContext.fillText("Press 2",150,200);
 		if (Key2 === true) {
 			Key2 = false
-			synthesis1 = synthesis + 1
+			synthesis1 = synthesis1 + 1
+			turn1 = false
 		}
 		if (Key1 === true) {
 			Key1 = false
 			wrong()
+			heart = heart - 1
+			turn1 = false
 		}
 	
 	}
-	synthesis1 = synthesis1 + 1
 	
 	}else if (synthesis1 === 1) {
-	synthesis1 = synthesis1 + 1
+			canvasContext.fillText("Press 1",150,200);
+		if (Key1 === true) {
+			Key1 = false
+			synthesis1 = synthesis1 + 1
+			turn1 = false
+			
+		}
+		if (Key2 === true) {
+			Key2 = false
+			wrong()
+			heart = heart - 1
+			turn1 = false
+		}
+	}else if (randy === 0) {
+		canvasContext.fillText("Press 2",150,200);
+		if (Key2 === true) {
+			Key2 = false
+			synthesis1 = synthesis1 + 1
+			turn1 = false
+		}
+		if (Key1 === true) {
+			Key1 = false
+			wrong()
+			heart = heart - 1
+			turn1 = false
+		}
+	
+	
 	
 	}else if (synthesis1 === 2) {
-	synthesis1 = synthesis1 + 1
+			canvasContext.fillText("Press 1",150,200);
+		if (Key1 === true) {
+			Key1 = false
+			synthesis1 = synthesis1 + 1
+			turn1 = false
+			
+		}
+		if (Key2 === true) {
+			Key2 = false
+			wrong()
+			heart = heart - 1
+			turn1 = false
+		}
+	}else if (randy === 0) {
+		canvasContext.fillText("Press 2",150,200);
+		if (Key2 === true) {
+			Key2 = false
+			synthesis1 = synthesis1 + 1
+			turn1 = false
+		}
+		if (Key1 === true) {
+			Key1 = false
+			wrong()
+			heart = heart - 1
+			turn1 = false
+		}
+	
+	
 	
 	}else if (synthesis1 === 3) {
-	synthesis1 = synthesis1 + 1
+			canvasContext.fillText("Press 1",150,200);
+		if (Key1 === true) {
+			Key1 = false
+			synthesis1 = synthesis1 + 1
+			turn1 = false
+			
+		}
+		if (Key2 === true) {
+			Key2 = false
+			wrong()
+			heart = heart - 1
+			turn1 = false
+		}
+	}else if (randy === 0) {
+		canvasContext.fillText("Press 2",150,200);
+		if (Key2 === true) {
+			Key2 = false
+			synthesis1 = synthesis1 + 1
+			turn1 = false
+		}
+		if (Key1 === true) {
+			Key1 = false
+			wrong()
+			heart = heart - 1
+			turn1 = false
+		}
+	
+	
 	
 	}else if (synthesis1 === 4) {
 	synthesis1 = 0
 	
-	}else {
-	window.setTimeout(attachment, 100);
 	}
+	window.setTimeout(synthesis, 100)
 }
 
 //################################\\
@@ -118,7 +204,7 @@ function injection() {
 		attachment()
 	
 } else {
-	window.setTimeout(attachment, 2000);
+	window.setTimeout(injection, 2000);
 }
 		
 	}else if (randy === 1) {
@@ -187,7 +273,7 @@ draw()
 	canvasContext.fillText("Wrong",280,100);
 	heart = heart - 1
 	
-	window.setTimeout(attachment, 2000);
+
 }
 
 //################################\\
@@ -263,12 +349,15 @@ function attachment() {
 	if (Key1 === true) {
 		Key1 = false
 		wrong()
+		window.setTimeout(attachment, 2000);
 	}else if (Key2 === true) {
 		Key2 = false
 		injection()
+		return
 	}else if (Key3 === true) {
 		Key3 = false
 		wrong()
+		window.setTimeout(attachment, 2000);
 	}else {
 	window.setTimeout(attachment, 100);
 	
