--- a/feudalcraft.html
+++ b/feudalcraft.html
@@ -25,3 +25,4 @@ font-size:40px;
 
 
 <p> NOOT THIS IS BEST WEBSITER EVER CAUSE CUBERSON MADE IT SO YEAH LIKE ITS AWESOMESSSSSS NOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTNOOTv</p>
+<img src="https://media3.giphy.com/media/pKZvvnJoFUh8Y/200.webp#3-grid1" alt="HTML5 Icon" style="width:128px;height:128px;">
