--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ p{
 
  </head><body><p> Makers of this page </p>
 <ul>
-  <p1> Maysam Farahani</p1><br>
-  <p1>Darrin Wong</p1>
+  <p1> Someone...</p1><br>
+  <p1>Someone...</p1>
    </ul>
 </body></html>
